--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "express-query-int": "^1.0.1",
     "express-validator": "^6.12.1",
+    "jsonwebtoken": "^8.5.1",
     "loadash": "^1.0.0",
     "mongoose": "^4.13.19",
     "mongoose-paginate": "^5.0.3",
